my-test/testsuite_scan/ir/SingleSource/Regression/C/gcc-c-torture/execute/20001111-1.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20001111-1.c:19:8: error: incompatible integer to pointer conversion assigning to 'char *' from 'unsigned int' [-Wint-conversion]
   19 |   data = buffer * 0xce2f;
      |        ^ ~~~~~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20001111-1.c:36:5: error: call to undeclared library function 'abort' with type 'void (void) __attribute__((noreturn))'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   36 |     abort ();
      |     ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20001111-1.c:36:5: note: include the header <stdlib.h> or explicitly provide a declaration for 'abort'
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20001111-1.c:40:3: error: call to undeclared library function 'exit' with type 'void (int) __attribute__((noreturn))'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   40 |   exit (0);
      |   ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20001111-1.c:40:3: note: include the header <stdlib.h> or explicitly provide a declaration for 'exit'
3 errors generated.
